fix: Window now scrolls when there's too much content.

--- a/src/main/webapp/css/multi-event-log-plugin.css
+++ b/src/main/webapp/css/multi-event-log-plugin.css
@@ -21,6 +21,7 @@
 	border-radius: 7px;
 	padding: 10px;
 	position: relative;
+	overflow: scroll;
 }
 
 .left-panel{
@@ -35,6 +36,8 @@
 }
 
 .top-right-panel{
+	height: 200px;
+	width: 900px;
 	background: #F2F2F2;
 	text-align: center;
 	overflow: auto;
